--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Demo</string>
     <string name="hello_text">Hello World</string>
+    <string name="click_me">Click Me!</string>
 </resources>
